social/mastodon/backend-traffic-policy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: mastodon-body-limit
  namespace: social
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: mastodon
  requestBuffer:
    limit: 40Mi
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: mastodon-minio-body-limit
  namespace: social
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: mastodon-minio
  requestBuffer:
    limit: 40Mi
