social/mastodon/httproutes-legacy.yaml
---
# Mastodon web (external)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mastodon-legacy-web
  namespace: social
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-gateway
      namespace: kube-system
      sectionName: https
  hostnames:
    - mastodon.${SECRET_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: legacy-mastodon-web
          port: 3000
---
# Mastodon streaming (external)
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mastodon-legacy-streaming
  namespace: social
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-gateway
      namespace: kube-system
      sectionName: https
  hostnames:
    - mastodon.${SECRET_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/streaming
      backendRefs:
        - name: legacy-mastodon-streaming
          port: 4000
